--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <div class="wrapper">
             <form action="#">
+                <input type="file" hidden>
                 <img src="Qr-SVG.svg" alt="">
 
                 <div class="content">
