--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <form action="#">
                 <input type="file" hidden>
-                <img src="Qr-SVG.svg" alt="">
+                <img src="" alt="">
 
                 <div class="content">
                     <i class="fas fa-cloud-upload"></i>
@@ -22,7 +22,7 @@
             </form>
 
             <div class="details">
-                <textarea disabled>This will be used to copy text.</textarea>
+                <textarea disabled></textarea>
                 <div class="buttons">
                     <button class="close">Close</button>
                     <button class="copy">Copy Text</button>
